--- a/notepad.lpi
+++ b/notepad.lpi
@@ -58,6 +58,7 @@
         <Filename Value="compileropt.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="Form2"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="CompilerOpt"/>
       </Unit>
