--- a/notepad.lpi
+++ b/notepad.lpi
@@ -62,6 +62,13 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="CompilerOpt"/>
       </Unit>
+      <Unit>
+        <Filename Value="outputmessages.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="Form3"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="OutputMessages"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
